kubernetes/base/gotenberg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
  namespace: opslens
spec:
  type: ClusterIP

  selector:
    app: gotenberg

  ports:
    - name: http
      port: 3000
      targetPort: http
